--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "beyondcode/laravel-websockets": "^1.3",
         "fideloper/proxy": "^4.0",
@@ -16,7 +17,7 @@
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.21",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "~4.0"
+        "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
