--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.27",
+        "laravel-echo": "^1.6.0",
         "moment": "^2.24.0",
+        "pusher-js": "^5.0.2",
+        "socket.io-client": "^2.3.0",
         "v-mask": "^2.0.1",
         "vee-validate": "^2.2.13",
         "vue-axios": "^2.1.4",
