--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.21",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "^4.0"
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
