--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vee-validate": "^2.2.13",
         "vue-axios": "^2.1.4",
         "vue-filter-date-format": "^1.2.5",
+        "vue-html-to-paper": "^1.1.1",
         "vue-moment": "^4.0.0",
         "vue-router": "^3.0.7",
         "vue-the-mask": "^0.11.1",
